# edu-level-text-simply

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
baselines/: __init__.py
baselines/common/: __init__.py
baselines/gemini/: runner.py
baselines/identity/: __init__.py  runner.py
baselines/llama3/: __init__.py  runner.py
baselines/readability/: readability_pipeline.py
baselines/round_trip/: round_trip.py
baselines/summarization/: __init__.py  runner.py
baselines/wrapper/: cli.py  router.py
data/: validation.jsonl
evaluation/: academic_eval.py
examples/: dummy_input.json  out-gemini.json  out-identity.json  out-llama3.json  out-summarization.json
method/: create_data_for_human.py  generate_data.py  infer_model.py  split_data.py  train_model.py
method/configs/: simple.yaml
method/slurm/: generate.sbatch  train.sbatch
outputs/: gemini.csv  identity.csv  llama3.csv  readability.csv  round_trip.csv  summarization.csv
predictions/: t5-finetune-run.jsonl
